package com.example.shop.domain;

public enum OrderStatus {

    PENDING,
    PLACED,
    PAID,
    CANCELLED

}
